# instagram-ai-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NOTICE.md  PLAN.md  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml  start.sh  watchdog.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  walkthrough.yml
data/ideas/: seed.json
scripts/: bootstrap.sh  bootstrap_music.sh  compose_real_walkthrough.py  gen_default_assets.py  gen_demo_media.py  gen_walkthrough_video.py  record_real_walkthrough.py  smoke_external.py
src/: __init__.py  cli.py  dashboard.py  niche_presets.py  orchestrator.py
src/brain/: competitor_intel.py  coverage.py  dm_seeder.py  embeddings.py  engagement_seeder.py  events.py  hashtag_discovery.py  idea_bank.py  news_feed.py  rag.py  reddit_harvester.py  retro.py  scraper.py  trend_miner.py  watcher.py
src/content/: captions.py  captions_render.py  contrarian_safety.py  critic.py  dedup.py  hashtags.py  image_rank.py  local_aesthetic.py  pipeline.py  style.py  transcribe.py
src/content/generators/: base.py  carousel.py  carousel_repurpose.py  format_picker.py  human_photo.py  meme.py  photo.py  playwright_render.py  quote_card.py  reel_ai.py  reel_stock.py  story_carousel.py  story_image.py  story_video.py
src/content/templates/carousels/: data.html
src/content/templates/memes/: expanding_brain.json  twobox.json
src/content/templates/quote_cards/: bold_block.html
src/core/: alerts.py  budget.py  config.py  db.py  llm.py  storage.py  warmup.py
src/dashboard_templates/: index.html
src/instagram_ai_agent/: cli.py  dashboard.py  niche_presets.py  orchestrator.py
src/instagram_ai_agent/brain/: competitor_intel.py  concept_miner.py  coverage.py  devto.py  dm_seeder.py  embeddings.py  engagement_seeder.py  events.py  follow_discovery.py  hackernews.py  hashtag_discovery.py  homepage_feed.py  idea_bank.py  news_feed.py  rag.py  reddit_harvester.py  retro.py  scraper.py  trend_miner.py  watcher.py  wiki_otd.py
src/instagram_ai_agent/content/: angle_brainstorm.py  captions.py  captions_render.py  comment_bait.py  contrarian_safety.py  critic.py  dedup.py  hashtags.py  image_rank.py  local_aesthetic.py  persona_lore.py  pipeline.py  slide1_hook.py  specificity_pass.py  story_arc.py  style.py  transcribe.py  voice_fingerprint.py
src/instagram_ai_agent/content/generators/: base.py  carousel.py  carousel_repurpose.py  format_picker.py  human_photo.py  meme.py  photo.py  playwright_render.py  quote_card.py  reel_ai.py  reel_hf.py  reel_stock.py  reel_transform.py  story_carousel.py  story_image.py  story_video.py
src/instagram_ai_agent/content/templates/carousels/: bottom_anchor.html  default.html  flush_left.html  magazine.html  oversized_number.html  photo_caption.html
src/instagram_ai_agent/content/templates/memes/: drake.json  expectation_reality.json  stages.json
src/instagram_ai_agent/content/templates/quote_cards/: default.html  library.json  serif.html
src/instagram_ai_agent/content/templates/stories/: default.html
src/instagram_ai_agent/core/: alerts.py  budget.py  config.py  db.py  friendly_errors.py  gates.py  llm.py  logging_setup.py  storage.py  warmup.py
src/instagram_ai_agent/dashboard_templates/: index.html  review.html
src/instagram_ai_agent/plugins/: audio_mix.py  beat_sync.py  challenge.py  comfyui.py  controlnet.py  device.py  film_emulation.py  finish_pass.py  hf_video.py  highlights.py  human_mimic.py  ig.py  lora.py  music.py  openverse.py  reddit_public.py  rur.py  stable_audio.py  video_overlay.py  ytdlp_source.py
src/instagram_ai_agent/workers/: comment_replier.py  dm_worker.py  engager.py  follow_back.py  health.py  poster.py  story_poster.py  story_viewer.py
src/plugins/: audio_mix.py  beat_sync.py  challenge.py  comfyui.py  controlnet.py  device.py  finish_pass.py  human_mimic.py  ig.py  lora.py  music.py  stable_audio.py  video_overlay.py
src/workers/: comment_replier.py  dm_worker.py  engager.py  follow_back.py  health.py  poster.py  story_poster.py  story_viewer.py
tests/: test_aesthetic.py  test_aged_account.py  test_angle_brainstorm.py  test_beat_sync.py  test_captions.py  test_carousel_repurpose.py  test_comment_bait.py  test_config.py  test_contrarian.py  test_controlnet.py  test_cookie_wizard.py  test_dashboard.py  test_db.py  test_dedup.py  test_dm_funnel.py  test_engagement_seeder.py  test_events.py  test_film_emulation.py  test_finish_pass.py  test_free_feeds.py  test_friendly_errors.py  test_hook_overlay.py  test_human_mimic.py  test_human_photo.py  test_idea_bank.py  test_llm_parse.py  test_lora.py  test_music.py  test_niche_presets.py  test_pause_heartbeat.py  test_playwright_fonts.py  test_quality_engagement.py  test_quality_v3.py  test_rag.py  test_reddit_harvester.py  test_setup_command.py  test_setup_hardening.py  test_slide1_hook.py  test_specificity_pass.py  test_stable_audio.py  (+8 more)
